# modern-video-player

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README_ZH.md  external.7z  开发日志实时记录
.github/workflows/: cross-platform-gate.yml  format-regression.yml
.monkeycode/docs/: playback-loop-exit-issue.md
cmake/: mvp_version.h.in  version_info.rc.in
config/: logging.conf  player_settings.ini
docs/: AI_FUNCTION_LEVEL_PROMPT_CHECKLIST.md  AI_SOURCE_ANALYSIS_PROMPT_PLAYBOOK.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR_2026-03-06.md  CHANGELOG.md  CROSS_PLATFORM_EVOLUTION_ROADMAP.md  CROSS_PLATFORM_REFACTOR_TASKLIST.md  DEVELOP_LOG.md  DOC_AUDIT_2026-03-08.md  FILTERS.md  FORMAT_REGRESSION.md  IMPLEMENTATION.md  LOGGING.md  MPC_HC_GAP_ANALYSIS.md  MPC_HC_ITERATION_PLAN.md  PHASE1_CROSS_PLATFORM_TODO.md  PLAYERCORE_PLAYBACK_STATE_MACHINE_DRAFT.md  PLAYER_FEATURES_USAGE_VALIDATION.md  PLAYER_REFERENCE_AND_FFMPEG_NOTES.md  QUILL_LOGGING.md  README.md  REGRESSION_OPERATION_PLAYBOOK.md  VERSION.md  WEEKLY_CONVERGENCE_PLAYBOOK.md  WINDOWS_SETUP.md  WORKFLOW.md  video-stream-index-fix.md
docs/analysis/: DOC_AUDIT_2026-03-08.md  MPC_HC_GAP_ANALYSIS.md  PLAYERCORE_DAY100_VK038_WINDOWS_VULKAN_PLAYBACK_CANDIDATES_SEMANTIC_EXPECTED_FAIL_CANARY.md  PLAYERCORE_DAY101_VK039_WINDOWS_VULKAN_PLAYBACK_PLAN_REASON_SEMANTIC_EXPECTED_FAIL_CANARY.md  PLAYERCORE_DAY102_VK040_WINDOWS_VULKAN_PLAYBACK_RESULT_NOT_PASS_EXPECTED_FAIL_CANARY.md  (+119 more)
docs/design/: ARCHITECTURE.md  (+78 more)
include/: audio_decode_thread.h  audio_decoder.h  audio_player.h  clock.h  decoder_worker.h  demuxer.h  display.h  frame_queue.h  logger.h  packet_reader.h  sync_manager.h  thread_safe_queue.h  video_decode_thread.h  video_decoder.h  video_player.h
logs/: mock_windows_vulkan_gate_player.cmd  mock_windows_vulkan_optional_skip_canary.cmd  mock_windows_vulkan_pass_contract_canary.cmd  mock_windows_vulkan_playback_backend_semantic_canary.cmd  mock_windows_vulkan_playback_candidates_semantic_canary.cmd  mock_windows_vulkan_playback_command_exit_nonzero_canary.cmd  mock_windows_vulkan_playback_contract_canary.cmd  mock_windows_vulkan_playback_plan_reason_semantic_canary.cmd  mock_windows_vulkan_playback_result_not_pass_canary.cmd  mock_windows_vulkan_playback_semantic_canary.cmd  mock_windows_vulkan_strict_diag_exit_nonzero_canary.cmd  mock_windows_vulkan_strict_runtime_unavailable_canary.cmd  mock_windows_vulkan_strict_unavailable_canary.cmd  mock_windows_vulkan_unsupported_platform_canary.cmd  windows-vulkan-canary-step-summary-preview-vk030.md  windows-vulkan-gate-contract-canary-gate-vk035.env  windows-vulkan-gate-contract-canary-summary-vk029.env  windows-vulkan-gate-contract-canary-summary-vk037.env  windows-vulkan-gate-optional-skip-canary-gate-vk034.env  windows-vulkan-gate-optional-skip-canary-summary-vk038.env  windows-vulkan-gate-pass-contract-canary-gate-vk034.env  windows-vulkan-gate-pass-contract-canary-summary-vk038.env  windows-vulkan-gate-playback-backend-semantic-canary-gate-vk040.env  windows-vulkan-gate-playback-backend-semantic-canary-summary-vk039.env  windows-vulkan-gate-playback-candidates-semantic-canary-gate-vk039.env  windows-vulkan-gate-playback-candidates-semantic-canary-summary-vk039.env  windows-vulkan-gate-playback-command-exit-nonzero-canary-gate-vk041.env  windows-vulkan-gate-playback-command-exit-nonzero-canary-summary-vk042.env  windows-vulkan-gate-playback-contract-canary-gate-vk035.env  windows-vulkan-gate-playback-contract-canary-summary-vk035.env  windows-vulkan-gate-playback-plan-reason-semantic-canary-gate-vk043.env  windows-vulkan-gate-playback-plan-reason-semantic-canary-summary-vk042.env  windows-vulkan-gate-playback-result-not-pass-canary-gate-vk040.env  windows-vulkan-gate-playback-result-not-pass-canary-summary-vk043.env  windows-vulkan-gate-playback-semantic-canary-gate-vk039.env  windows-vulkan-gate-playback-semantic-canary-summary-vk043.env  windows-vulkan-gate-strict-diag-exit-nonzero-canary-gate-vk043.env  windows-vulkan-gate-strict-diag-exit-nonzero-canary-summary-vk043.env  windows-vulkan-gate-strict-runtime-unavailable-canary-gate-vk043.env  windows-vulkan-gate-strict-runtime-unavailable-canary-summary-vk043.env  (+25 more)
samples/: .gitignore  README.md
src/: audio_decode_thread.cpp  audio_decoder.cpp  audio_player.cpp  clock.cpp  decoder_worker.cpp  demuxer.cpp  display.cpp  logger.cpp  main.cpp  packet_reader.cpp  sync_manager.cpp  video_decode_thread.cpp  video_decoder.cpp  video_player.cpp
tests/: core_clock_tests.cpp  core_frame_queue_tests.cpp
tools/: build_rc_artifacts.ps1  collect_driver_quirk_sample.ps1  download_test_samples.ps1  package_linux.sh  package_windows.ps1  run_all_checks.ps1  run_linux_mvp_checks.sh  run_opengl_checks.ps1  run_windows_ci_gate.ps1  run_windows_vulkan_checks.ps1  run_windows_vulkan_gate_auto_optional_no_probe_canary.ps1  run_windows_vulkan_gate_auto_optional_sdk_missing_canary.ps1  run_windows_vulkan_gate_auto_strict_dual_probe_canary.ps1  run_windows_vulkan_gate_auto_strict_native_probe_canary.ps1  run_windows_vulkan_gate_auto_strict_swiftshader_probe_canary.ps1  run_windows_vulkan_gate_contract_canary.ps1  run_windows_vulkan_gate_optional_skip_canary.ps1  run_windows_vulkan_gate_pass_contract_canary.ps1  run_windows_vulkan_gate_playback_backend_semantic_canary.ps1  run_windows_vulkan_gate_playback_candidates_semantic_canary.ps1  run_windows_vulkan_gate_playback_command_exit_nonzero_canary.ps1  run_windows_vulkan_gate_playback_contract_canary.ps1  run_windows_vulkan_gate_playback_plan_reason_semantic_canary.ps1  run_windows_vulkan_gate_playback_result_not_pass_canary.ps1  run_windows_vulkan_gate_playback_semantic_canary.ps1  run_windows_vulkan_gate_strict_compiled_in_disabled_canary.ps1  run_windows_vulkan_gate_strict_diag_exit_nonzero_canary.ps1  run_windows_vulkan_gate_strict_diag_result_not_pass_canary.ps1  run_windows_vulkan_gate_strict_runtime_unavailable_canary.ps1  run_windows_vulkan_gate_strict_unavailable_canary.ps1  run_windows_vulkan_gate_unsupported_platform_canary.ps1  start_streaming_fixture_server.ps1
(+443 files in other folders)
